# auto-truststore

./: README.md  auto-truststore.pth  pyproject.toml
