#:schema https://json.schemastore.org/pyproject.json

[project]
name = "auto-truststore"
version = "0.1.0"
description = "Auto inject native system certificate stores"
authors = [{ name = "ZhengYu, Xu", email = "zen-xu@outlook.com" }]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10,<4"
dependencies = ["truststore >=0.9.2"]

[project.urls]
homepage = "https://github.com/zen-xu/auto-truststore"
repository = "https://github.com/zen-xu/auto-truststore.git"
issues = "https://github.com/zen-xu/auto-truststore/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
only-include = ["auto-truststore.pth"]
